[package]
name = "bitpack"
version = "0.2.0"
authors = ["quininer kel <quininer@live.com>"]
description = "Rust bitpack library, support `no_std` environment."
repository = "https://github.com/quininer/bitpack"
documentation = "https://docs.rs/bitpack/"
keywords = [ "bitpack", "no_std" ]
license = "MIT"

[dependencies]

[features]
use_std = []
use_vec = []
